--- a/src/components/ClientForm/ClientForm.module.css
+++ b/src/components/ClientForm/ClientForm.module.css
@@ -1,7 +1,8 @@
-.formContainer {
-  margin: 20px 0;
-  padding: 10px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.car {
+  margin-bottom: 10px;
 }
