--- a/src/components/VehicleList/VehicleList.module.css
+++ b/src/components/VehicleList/VehicleList.module.css
@@ -1,17 +1,12 @@
-.clientList {
+.vehicleList {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
 
-.clientCard {
+.vehicleCard {
   border: 1px solid #ccc;
   padding: 10px;
   border-radius: 5px;
-  cursor: pointer;
-  width: 200px;
-}
-
-.clientCard:hover {
-  background-color: #f0f0f0;
+  width: 250px;
 }
