--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,27 @@
 /* src/styles/globals.css */
+/* src/styles/globals.css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Bowlby One SC", cursive;
+}
+
+:root {
+  --main-bg: #000;
+  --border-color: #8f4790;
+  --button-bg: #824283;
+  --button-hover: #8f4790;
+}
+
+body {
+  height: 100vh;
+  background-color: var(--main-bg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .login-container {
   display: flex;
   flex-direction: column;
